--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -63,7 +63,7 @@ jobs:
     name: Pretend to do deploy
     runs-on: ubuntu-latest
     needs: [test-job1, test-job2]
-    if: always() #for job to run with test-job2 fail
+#     if: always() #for job to run with test-job2 fail
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -79,4 +79,4 @@ jobs:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       uses: Ilshidur/action-discord@master
       with:
-        args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
+        args: 'Nikita smashes {{ EVENT_PAYLOAD.repository.full_name }}'
