--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -31,6 +31,7 @@ jobs:
           channel: 'stable'
     - run: flutter pub get
     - run: flutter pub global activate junitreport
+    - run: export PATH="$PATH":"$HOME/.pub-cache/bin"
     - run: flutter test --machine | tojunit -o report.xml
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
@@ -52,6 +53,7 @@ jobs:
           channel: 'stable'
     - run: flutter pub get
     - run: flutter pub global activate junitreport
+    - run: export PATH="$PATH":"$HOME/.pub-cache/bin"
     - run: pub run test test/widget_test_fail.dart --reporter json | tojunit -o report.xml
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
