--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -51,8 +51,7 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
           channel: 'stable'
-    - run: export PATH="$PATH":"/opt/hostedtoolcache/flutter/2.0.3-stable/x64/.pub-cache/bin"
-    - run: export PATH="$PATH":"$HOME/.pub-cache/bin"
+    - run: echo "$FLUTTER_HOME/.pub-cache/bin" >> $GITHUB_PATH
     - run: flutter pub get
     - run: flutter pub global activate junitreport
     - run: pub run test test/widget_test_fail.dart --reporter json | tojunit -o report.xml
