--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,7 +18,7 @@ jobs:
     - run: flutter build appbundle
   
   test-job1:
-    name: Test widgets successefuly
+    name: Test widgets
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -40,7 +40,7 @@ jobs:
         files: report.xml
   
   test-job2:
-    name: Test widgets with fail
+    name: Test widgets again
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -54,7 +54,7 @@ jobs:
     - run: echo "$FLUTTER_HOME/.pub-cache/bin" >> $GITHUB_PATH
     - run: flutter pub get
     - run: flutter pub global activate junitreport
-    - run: pub run test test/widget_test_fail.dart --reporter json | tojunit -o report.xml
+    - run: flutter test --machine | tojunit -o report.xml
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: always()
