--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -14,4 +14,5 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
           channel: 'stable'
+    - run: echo "/home/runner/.local/bin" >> $GITHUB_PATH
     - uses: pre-commit/action@v2.0.0
