--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -16,3 +16,5 @@ jobs:
           channel: 'stable'
     - run: echo "/home/runner/.local/bin" >> $GITHUB_PATH
     - uses: pre-commit/action@v2.0.0
+      with: 
+         extra_args: ''
